docs: check root
