# api/controllers/root_controller.go
@@ -7,6 +7,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// CheckRoot godoc
+// @Summary Test root
+// @Description Responds with "Hello world" message.
+// @Tags root
+// @Produce json
+// @Success 200 {object} responses.RootResponse
+// @Router / [get]
 func CheckRoot() gin.HandlerFunc {
 	return func(c *gin.Context) {
 
