# docs/swagger.json
@@ -8,6 +8,26 @@
     },
     "host": "localhost:9090",
     "paths": {
+        "/": {
+            "get": {
+                "description": "Responds with \"Hello world\" message.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Test root",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.RootResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/rules": {
             "get": {
                 "description": "Responds with the list of all rules as JSON.",
@@ -70,6 +90,19 @@
                 "question": {
                     "type": "string",
                     "example": "What time is it?"
+                }
+            }
+        },
+        "responses.RootResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "success"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 200
                 }
             }
         },
